# xmath

./: .gitignore  CMakeLists.txt  README.md
srcs/: core.hpp  device.hpp  dot.hpp  exp.cpp  exp.hpp  log.cpp  log.hpp  math.hpp
srcs/avx512/: dot.cpp  log.cpp
srcs/neon/: dot.cpp  exp.cpp  log.cpp
srcs/x64/: dot.cpp  exp.cpp  log.cpp
tests/: main.cpp
